# first-pmtiles-map

./: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/skills/browser-screenshots/: SKILL.md
.github/skills/browser-screenshots/scripts/: capture.cjs  record-video.cjs  save-session.cjs
.github/skills/page-scroll-video/: SKILL.md
.github/skills/page-scroll-video/scripts/: record.cjs
.github/skills/vscode-screenshots/: SKILL.md
.github/skills/vscode-screenshots/scripts/: capture.cjs
.github/workflows/: docs.yaml  pages.yml
docs/: Makefile  build-tiles.md  conf.py  create-map.md  download-the-data.md  index.md  style-the-data.md  what-you-will-make.md
docs/_static/videos/: .gitkeep
src/: index.html
