[build-system]
requires = ["setuptools >= 61.0"]

[project]
name = "first-pmtiles-map"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
]
authors = [{ name = "Ben Welsh", email = "b@palewi.re" }]
description = "Learn how to display a massive dataset on an interactive map using PMTiles and Maplibre"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pre-commit"]
